[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/dialogic/Editor/ThemeEditor/AudioPicker.gd" type="Script" id=1]

[node name="AudioPicker" type="GridContainer"]
margin_right = 265.0
margin_bottom = 132.0
size_flags_horizontal = 3
custom_constants/hseparation = 10
columns = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileLabel" type="Label" parent="."]
margin_top = 5.0
margin_right = 103.0
margin_bottom = 19.0
hint_tooltip = "Either select an audio file or a folder full of audio files."
mouse_filter = 1
text = "Use audio file(s)"

[node name="FileHBoxContainer" type="HBoxContainer" parent="."]
margin_left = 113.0
margin_right = 265.0
margin_bottom = 24.0

[node name="EnableCheckBox" type="CheckBox" parent="FileHBoxContainer"]
margin_right = 24.0
margin_bottom = 24.0

[node name="PathButton" type="Button" parent="FileHBoxContainer"]
margin_left = 28.0
margin_right = 152.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "File or Folder"

[node name="VolumeLabel" type="Label" parent="."]
margin_top = 33.0
margin_right = 103.0
margin_bottom = 47.0
text = "Volume (dB)"

[node name="VolumeHBoxContainer" type="HBoxContainer" parent="."]
margin_left = 113.0
margin_top = 28.0
margin_right = 265.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="VolumeSpinBox" type="SpinBox" parent="VolumeHBoxContainer"]
margin_right = 74.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -80.0
step = 0.01

[node name="VolumeRandRangeSpinBox" type="SpinBox" parent="VolumeHBoxContainer"]
margin_left = 78.0
margin_right = 152.0
margin_bottom = 24.0
hint_tooltip = "Random Range"
step = 0.01
prefix = "±"

[node name="PitchLabel" type="Label" parent="."]
margin_top = 61.0
margin_right = 103.0
margin_bottom = 75.0
text = "Pitch"

[node name="PitchHBoxContainer" type="HBoxContainer" parent="."]
margin_left = 113.0
margin_top = 56.0
margin_right = 265.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="PitchSpinBox" type="SpinBox" parent="PitchHBoxContainer"]
margin_right = 74.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 4
step = 0.01

[node name="PitchRandRangeSpinBox" type="SpinBox" parent="PitchHBoxContainer"]
margin_left = 78.0
margin_right = 152.0
margin_bottom = 24.0
hint_tooltip = "Random Range"
max_value = 10.0
step = 0.01
prefix = "±"

[node name="AllowInterruptLabel" type="Label" parent="."]
margin_top = 89.0
margin_right = 103.0
margin_bottom = 103.0
text = "Allow interrupt"

[node name="AllowInterruptCheckBox" type="CheckBox" parent="."]
margin_left = 113.0
margin_top = 84.0
margin_right = 265.0
margin_bottom = 108.0

[node name="AudioBusLabel" type="Label" parent="."]
margin_top = 115.0
margin_right = 103.0
margin_bottom = 129.0
text = "Audio Bus"

[node name="AudioBusOptionButton" type="OptionButton" parent="."]
margin_left = 113.0
margin_top = 112.0
margin_right = 265.0
margin_bottom = 132.0
text = "Master"
items = [ "Master", null, false, 0, null, "Voice Lines", null, false, 1, null, "New Bus", null, false, 2, null ]
selected = 0

[connection signal="toggled" from="FileHBoxContainer/EnableCheckBox" to="." method="_on_EnableCheckBox_toggled"]
[connection signal="pressed" from="FileHBoxContainer/PathButton" to="." method="_on_PathButton_pressed"]
[connection signal="value_changed" from="VolumeHBoxContainer/VolumeSpinBox" to="." method="_on_VolumeSpinBox_value_changed"]
[connection signal="value_changed" from="VolumeHBoxContainer/VolumeRandRangeSpinBox" to="." method="_on_VolumeRandRangeSpinBox_value_changed"]
[connection signal="value_changed" from="PitchHBoxContainer/PitchSpinBox" to="." method="_on_PitchSpinBox_value_changed"]
[connection signal="value_changed" from="PitchHBoxContainer/PitchRandRangeSpinBox" to="." method="_on_PitchRandRangeSpinBox_value_changed"]
[connection signal="toggled" from="AllowInterruptCheckBox" to="." method="_on_AllowInterruptCheckBox_toggled"]
[connection signal="item_selected" from="AudioBusOptionButton" to="." method="_on_AudioBusOptionButton_item_selected"]
